package ar.edu.utn.frba.dds.fuente;

import java.util.List;

public interface ArchivoDeHechos {
  List<List<String>> getRegistros();
}
