@startuml
'https://plantuml.com/class-diagram
!include https://raw.githubusercontent.com/patrik-csak/one-dark-plantuml-theme/v1.0.1/theme.puml

class Contribuyente {
    nombre: String
    apellido: String
    edad: String
    {static} crearContribuyenteAnonimo()
    {static} crearContribuyente()
}

interface FiltroDeHecho {
    boolean filtrar(Hecho hecho)
}

class TituloFiltroDeHecho implements FiltroDeHecho {

}

class CategoriaFiltroDeHecho implements FiltroDeHecho {

}

class FechaDelHechoFiltroDeHecho implements FiltroDeHecho {

}

class TipoContenidoMulitmediaFiltroDeHecho implements FiltroDeHecho {

}

class Coleccion {
    titulo: String
    descripcion: String
    hechos: Collection<Hecho>
    fuente: Fuente
    criteriosDePertenencia: List<FiltroDeHecho> criteriosDePertenencia

    {static} Coleccion crearColeccionManual(String titulo, String descripcion)
    {static} Coleccion crearColeccion(String titulo, String descripcion, Fuente fuente)
    void agregarFiltro(FiltroDeHecho filtro)
    void colectarHechos()
    void agregarHecho(Hecho hecho)
    Collection<Hecho> hechos()
}

class ArchivoCSVDelClassPathLocalImpl implements ArchivoDeHechos {
    List<List<String>> getRegistros()
}

interface ArchivoDeHechos {
    List<List<String>> getRegistros()
}

interface Fuente {
    Collection<Hecho> traerHechos()
}

class FuenteEstatica {
    archivoDeHechos: ArchivoDeHechos
    hechos: Collection<Hecho> hechos

    {static} FuenteEstatica crear(ArchivoDeHechos archivoDeHechos)
    Collection<Hecho> traerHechos()
}

class Hecho {
    titulo: String
    descripcion: String
    categoria: Categoria
    contenidoMultimedia: ContenidoMultimedia
    ubicacion: Ubicacion
    fechaDelHecho: LocalDateTime
    fechaDeCarga: LocalDateTime
    hechoOrigen: HechoOrigen
    etiquetas: Collection<Etiqueta>
    solicitudDeEliminacionDeHechosPendientes: Collection<SolicitudDeEliminacionDeHecho>
    eliminado: boolean

    {static} Hecho crearHechoDeTexto(...)
    public SolicitudDeEliminacionDeHecho solicitarEliminacion(String motivo)
    public boolean estaEliminado() {
    public void eliminar() {
    void etiquetar(String etiqueta)
}

class Etiqueta {
  nombre: String
}

class Categoria {
  nombre: String
}

class Categorias {
  {static} categorias: Collection<Categoria>
  {static} Categoria categoria(String nombre)
}

class SolicitudDeEliminacionDeHecho {
  hecho: Hecho
  motivo: String
  SolicitudDeEliminacionDeHecho(Hecho hecho, String motivo)
  void rechazar()
  public void aceptar()
}

class Ubicacion {
    latitud: String
    longitud: String
}

class ContenidoMulitmedia {
    tipoContenidoMultimedia: TipoContenidoMultimedia
    uri: String
}

enum TipoContenidoMulitmedia {
    FOTO
    VIDEO
    AUDIO
}

enum HechoOrigen {
    CONTRIBUYENTE
    MANUAL
    EXTERNO
}

ContenidoMulitmedia --> TipoContenidoMulitmedia
FuenteEstatica --> ArchivoDeHechos
FuenteEstatica <|-- Fuente
Coleccion --> FiltroDeHecho
Coleccion o-- Hecho
Coleccion --> Fuente
Hecho --> ContenidoMulitmedia
Hecho --> Contribuyente
Hecho --> HechoOrigen
Hecho --> Categoria
Hecho --> Ubicacion
Hecho *-- SolicitudDeEliminacionDeHecho
Hecho *-- Etiqueta
Categorias o-- Categoria

@enduml